--- a/common.blocks/article-container/__text/article-container__text.css
+++ b/common.blocks/article-container/__text/article-container__text.css
@@ -6,7 +6,6 @@
 
 @media (min-width: 768px) {
     .article-container__text {
-        align-self: stretch;
         margin-left: 24px;
     }
 }
