--- a/common.blocks/article-container/article-container.css
+++ b/common.blocks/article-container/article-container.css
@@ -7,6 +7,6 @@
     .article-container {
         flex-direction: row;
         justify-content: space-between;
-        align-items: stretch;
+        align-items: flex-start;
     }
 }
